# ESMDisPred

./: .dockerignore  .gitignore  Dockerfile  DockerfileRoot  ESMDispS.def  README.md  buildDocker.sh  install_dependencies.sh  pyproject.toml  run_ESMDisPred.sh  run_ESMDisPred_Docker.sh  run_ESMDisPred_singularity.sh  run_downloadLargeModels.sh
SingularityTest/: SingularityReadme.txt
dataset/: TrainSet.fasta
del/disorder/Dispredict3.0/: DP00000.caid  P01034.caid  P0DJI9.caid
del/disorder/ESMDisPred/: P61626.caid
example/: sample.fasta
models/: model_ESM2DisPred.pkl  model_ESM2PDBDispred.pkl  model_ESMDisPred.pkl
outputs/: timings.csv  timings_Dispredict3.0.csv  timings_ESM2DisPred.csv  timings_ESM2Dispred.csv  timings_ESM2PDBDisPred.csv  timings_ESM2PDBDispred.csv  timings_ESMDisPred.csv  timings_ESMDispred.csv
outputs/disorder/: DP01096.caid
outputs/disorder/Dispredict3.0/: DP00000.caid  DP02342.caid  P01034.caid  P0DJI9.caid  P61626.caid
outputs/disorder/ESM2DisPred/: DP00000.caid  DP02342.caid  P01034.caid  P0DJI9.caid  P61626.caid
outputs/disorder/ESM2PDBDisPred/: DP00000.caid  DP02342.caid  P0DJI9.caid
outputs/disorder/ESM2PDBDispred/: P01034.caid  P61626.caid
outputs/disorder/ESMDisPred/: DP00000.caid  DP02342.caid  (+1 more)
script/: preprocess.py  run_Dispredict3.sh  run_ESM2.py  run_ESMDisPred.py  systemResource.py
script/modScripts/: DisoCombP.sh  Dispredict3.0.py
scripts/: missing_features_Dispred.txt  preprocess.py  run_Dispredict3_Docker.sh  run_ESMDisPred.py  split_Data.py
tools/Dispredict3.0/: README.md  install_dependencies_dispredict3.sh  pyproject.toml
tools/SingularityTest/: Dockerfile  SingularityReadme.txt
(+7 files in other folders)
