[tool.poetry]
name = "dispredict3.0"
version = "0.1.0"
description = "Dispredict3.0: Prediction of Intrinsically Disordered Proteins with Protein Language Model"
authors = ["Md Wasi Ul Kabir <mkabir3@uno.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
scikit-learn = "0.23.1"
keras = "2.4.3"
tensorflow = "2.4.1"
pandas = "1.2.2"
fair-esm = "^2.0.0"
lightgbm = "^4.3.0"
biopython = "^1.79"
gdown = "^4.4.0"
torch = "1.13.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
